<resources>
    <string name="app_name">RentCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="Roommates">Add Roommate</string>
    <string name="deleteRoommate">Delete Roommate</string>
    <string name="ElectricBillperMate">Electric Bill per Mate:</string>
    <string name="totalElectricBill">Total Electric Bill</string>
    <string name="baseRent">Base Rent per Mate:</string>
    <string name="InsuranceperMate">Insurance per Mate:</string>
    <string name="internetperMate">Internet per Mate:</string>
    <string name="zero">0.00</string>
    <string name="setElectricity">Set Elec.</string>
    <string name="setBaseRent">Set BaseRent</string>
    <string name="setInsurance">Set Ins.</string>
    <string name="setInternet">Set Internet</string>
    <string name="viewCurrent">View Current Rents</string>
</resources>
